ServiceNow Careers - Sr. Software Engineer-Full Stack. Job Application for Senior Mobile SDET (Software Developer In Test) at JUUL Labs. Job Application for Software Engineer – Computational Fluid Dynamics at JUUL Labs. Guidewire Software, Inc. Careers - Senior Software Developer - Mississauga, ON, Canada. NICE Actimize Careers - Software Engineer. Spry Squared, Inc. Software Engineer | SmartRecruiters. Spireon Careers - Sr. Software Engineer in Test. Traveloka Sr. Software Engineer - Data | SmartRecruiters. Square Software Engineer (Frontend), Point of Sale Invoices | SmartRecruiters. Tucows Careers - Intermediate Software Developer. Axon - Embedded Software Engineer. Axon - Senior Embedded Software Engineer. Fanatics - Principal Software Engineer. Fanatics - Software Engineer. Fanatics - Senior Software Engineer. Fanatics - Software Engineer # 5244. Full Stack Senior Software Engineer - h2o.ai - Career Page. Senior Software Engineer (Multiple States) - h2o.ai - Career Page. Job Application for Software Engineer C++ - Language Modeling at SoundHound Inc.. Job Application for Software Engineer C++ - Language Modeling at SoundHound Inc.. Job Application for Software Engineer C++ - Language Modeling at SoundHound Inc.. Co-op Software Engineer - DevOps - Nokia Careers. Blue Wire Software JAVA SOFTWARE DEVELOPER | SmartRecruiters. Blue Wire Software Software Developer Engineer in Test | SmartRecruiters. Seequent - Jobs: Senior Software Developer - Apply online. Seequent - Jobs: Software Developer - Apply online. Seequent - Jobs: Software Developer (2 roles) - Apply online. Quotient Technology Inc. Careers - Software Engineer-1. Job Application for Software Engineer (Rust) at Starry. Job Application for Principal System Software Engineer (Linux) at Starry. Job Application for Software Engineer, Node.js at Starry. Magnitude Software Careers - Senior C++ & Go Software Developer. Junior Software Engineer -  Activision Careers. Sr. Software Engineer - Central Tech -  Activis

--- a/software.html
+++ b/software.html
@@ -51,11 +51,11 @@
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oRBQ8fwa&__jvst=Employee&__jvsd=sBKSFgwD&__jvsc=Twitter&bid=no59WLwO'>Guidewire Software, Inc. Careers - Senior Software Developer - Mississauga, ON, Canada</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oRBQ8fwa&__jvst=Employee&__jvsd=sBKSFgwD&__jvsc=Twitter&bid=no59WLwO'>Guidewire Software, Inc. Careers - Senior Software Developer - Mississauga, ON, Canada</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nice-actimize-old/job/o6mbafwx'>NICE Actimize Careers - Software Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/nice-actimize-old/job/o6mbafwx'>NICE Actimize Careers - Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -131,11 +131,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BlueWireSoftware/743999692086251-software-developer-engineer-in-test'>Blue Wire Software Software Developer Engineer in Test | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BlueWireSoftware/743999692086251-software-developer-engineer-in-test'>Blue Wire Software Software Developer Engineer in Test | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://seequent.workable.com/j/233BD8D624'>Seequent - Jobs: Senior Software Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://seequent.workable.com/j/233BD8D624'>Seequent - Jobs: Senior Software Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -271,7 +271,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://recruit.hirebridge.com/v3/application/applink.aspx?cid=7801&jid=498542&source=builtin.com'>Senior Software Engineer - Java/ Scala</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://recruit.hirebridge.com/v3/application/applink.aspx?cid=7801&jid=498542&source=builtin.com'>Senior Software Engineer - Java/ Scala</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>23 hours ago ... Senior Software Engineer - Java/ Scala. Denver. Enter your email address and 
 click next. Email Address Please enter a valid email address Please enter a?...</p>
@@ -317,7 +317,7 @@ places to eat worldwide and 450+ million unique monthly visitors, we help?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://profacebook.applytojob.com/apply/LFRM4Qnawv/Visualization-Tools-Software-Engineer'>Visualization tools software engineer - PRO Unlimited @ Facebook - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://profacebook.applytojob.com/apply/LFRM4Qnawv/Visualization-Tools-Software-Engineer'>Visualization tools software engineer - PRO Unlimited @ Facebook - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -442,7 +442,7 @@ operational feedback and diagnostics functionality. Help bring up new systems,?.
 Cloud (w/m/x) - Ehrenamt f?r B?ume retten (published: 15.07.2019). Apply now 
 or?...</p>
 <hr/>
-<h5><a href='https://looka.workable.com/jobs/1073438'>Looka (formerly Logojoy) - Jobs: Lead Software Engineer - Apply ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://looka.workable.com/jobs/1073438'>Looka (formerly Logojoy) - Jobs: Lead Software Engineer - Apply ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Looka (formerly Logojoy) is exploring the intersection of machine learning and 
 design, providing users with a platform to make beautiful designs for any project.</p>
@@ -452,7 +452,7 @@ design, providing users with a platform to make beautiful designs for any projec
 <p>4 days ago ... Apply online for the job of Staff Software Engineer, Applied Machine Learning at 
 SmartNews, Inc.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
